@@ -1,3 +1,10 @@
+2008-07-29  Jonathan Gonzalez V.  <zeus@gnu.org>
+
+	* administracion_productos.c (ModificarMargenVenta): Fixed to fit
+	with the use of GtkBuilder.
+	(Recepcion, RecivirWindow, Devolucion, DevolucionWindow): Deleted functions.
+	Deleted unnecessary vars.
+
 2008-07-28  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>
 
 	* caja.h: Deleted GtkWidget *caja_button.
